argocd/infra/external-services/ntopng.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntopng-httproute
spec:
  hostnames:
    - ntopng.yanello.net
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
  rules:
    - backendRefs:
        - name: ntopng-service
          group: ""
          kind: Service
          port: 30341
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: ntopng-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 30341
      targetPort: 30341
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ntopng-service-1 # by convention, use the name of the Service
  # as a prefix for the name of the EndpointSlice
  labels:
    # You should set the "kubernetes.io/service-name" label.
    # Set its value to match the name of the Service
    kubernetes.io/service-name: ntopng-service
    endpointslice.kubernetes.io/managed-by: cluster-admin
addressType: IPv4
ports:
  - name: http # should match with the name of the service port defined above
    appProtocol: http
    protocol: TCP
    port: 30341
endpoints:
  - addresses:
      - 192.168.1.1
    conditions:
      ready: true
