argocd/infra/external-services/proxmox.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxmox
spec:
  hostnames:
    - proxmox.yanello.net
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
  rules:
    - backendRefs:
        - name: proxmox-service
          group: ""
          kind: Service
          port: 8006
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-service
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8006
      targetPort: 8006
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox-service-1
  labels:
    kubernetes.io/service-name: proxmox-service
    endpointslice.kubernetes.io/managed-by: cluster-admin
addressType: IPv4
ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - 192.168.10.77
    conditions:
      ready: true
