argocd/infra/external-services/truenas.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: truenas
spec:
  hostnames:
    - truenas.yanello.net
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: truenas-tls-passthrough
  rules:
    - backendRefs:
        - name: truenas-service
          group: ""
          kind: Service
          port: 443
          weight: 1
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas-service-1
  labels:
    kubernetes.io/service-name: truenas-service
    endpointslice.kubernetes.io/managed-by: cluster-admin
addressType: IPv4
ports:
  - name: http
    appProtocol: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - 192.168.10.78
    conditions:
      ready: true
