argocd/infra/external-services/ubiquiti.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: ubiquiti
spec:
  hostnames:
    - ubiquiti.yanello.net
    - ui.yanello.net
  parentRefs:
    - name: cilium-private-tls-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: ubiquiti-tls-passthrough
  rules:
    - backendRefs:
        - name: ubiquiti-service
          group: ""
          kind: Service
          port: 8443
          weight: 1
---
apiVersion: v1
kind: Service
metadata:
  name: ubiquiti-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8443
      targetPort: 8443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ubiquiti-service-1
  labels:
    kubernetes.io/service-name: ubiquiti-service
    endpointslice.kubernetes.io/managed-by: cluster-admin
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8443
endpoints:
  - addresses:
      - 192.168.1.4
    conditions:
      ready: true
